# NLP-Case

./: .gitignore  Dockerfile  README.md  Report_NLP_Case.docx  TextProcessor.py  k8s.yml  okteto.yml  pyproject.toml  requirements.txt  setup.cfg
keywords_extraction_test/: BERT_model.py  RAKE_model.py  TextRank_model.py  keywords_extraction_test.ipynb
server/app/: main.py
server/app/db/: db_access.py  db_push.py
server/app/models/: TextRank_model.py  Text_Simularity_model.py  __init__.py
server/app/models/parsers/: __init__.py  test.py
server/app/models/preprocessor/: StandartPreprogressor.py  Text2Vec.py  __init__.py
server/test/: test.py
src/nlp_case/data/: model_data.json  sentence_level_em_pos.model
src/nlp_case/server/app/: main.py
src/nlp_case/server/app/db/: db_access.py  db_push.py  milvus_bridge.py
src/nlp_case/server/app/models/: NER_Disease_net.py  NER_Disease_recognizer.py  Text_Similarity_model.py  Text_Simularity_model.py  Tfidf_model.py  __init__.py
src/nlp_case/server/app/models/parsers/: PDFparser.py  tokenParser.py
src/nlp_case/server/app/models/preprocessor/: StandardPreprocessor.py  Text2Vec.py  (+2 more)
src/nlp_case/server/app/tmp/: out.txt
tests/: NER_test.py  article.txt  keyword_test.ipynb  keyword_test.py  test_NER.txt  test_keywords.py  test_pdf.py
tests/Keywords_tests/: search_by_keywords.py
tests/NER_tests/: NER_test.py
tests/Simularity_tests/: test_PdfParser.py  test_pdf.py
tests/keywords_extraction_test/: KeyWordExtractorChecking.py  RAKE_model.py  StopListGenerator.py  TextProcessor.py  keywords_extraction_test.ipynb
(+1 files in other folders)
