[metadata]
name = nlp_case
description = Searching articles from arxiv.org using nlp algorithms
author = Andrew

[options]
packages = nlp_case
install_requires =
    pymongo>=3.12.0
    pdfminer>=20191125
    pandas>=1.2.0
    gensim>=4.1.0
    nltk>=3.5
    sklearn>=0.0
    summa>=1.2.0
    Flask>=2.0.1
python_requires = >=3.9
package_dir = 
    =src
zip_safe = no

